--- a/README.org
+++ b/README.org
@@ -1,3 +1,20 @@
 * emacs-maple-explorer
 ** screenshots
    [[https://github.com/honmaple/emacs-maple-explorer/blob/master/screenshot/example.png]]
+
+** How to use
+   #+begin_src bash
+     git clone https://github.com/honmaple/emacs-maple-explorer ~/.emacs.d/site-lisp/maple-explorer
+   #+end_src
+
+   #+begin_src elisp
+     (require 'maple-explorer)
+     (when (and (display-graphic-p) *icon*) (maple-explorer-icon-mode))
+
+     ;; with use-package
+     (use-package maple-explorer
+       :quelpa (:fetcher github :repo "honmaple/emacs-maple-explorer")
+       :commands (maple-explorer-file maple-explorer-buffer maple-explorer-imenu maple-explorer-recentf)
+       :config
+       (setq maple-explorer-file-display-alist '((side . left) (slot . -1))))
+   #+end_src
